--- a/src/html/blocks/hero.html
+++ b/src/html/blocks/hero.html
@@ -7,7 +7,7 @@
         <p>Experience music like never before</p>
       </div>
       <div class="hero__link">
-        <a href="#" class="btn btn--m">Shopping Now</a>
+        <a href="#" class="btn">Shopping Now</a>
       </div>
     </div>
   </div>
