--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,7 +11,8 @@
 		@@include('blocks/tagline.html')
 		@@include('blocks/nav.html')
 		<!-- @@include('blocks/hero.html') -->
-		@@include('blocks/arrivals.html')
+		<!-- @@include('blocks/arrivals.html') -->
+		@@include('blocks/collection.html')
 		<!-- @@include('blocks/header.html') -->
 		@@include('blocks/footer.html')
 		<script src="./js/index.bundle.js"></script>
