--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,7 +12,9 @@
 		@@include('blocks/nav.html')
 		<!-- @@include('blocks/hero.html') -->
 		<!-- @@include('blocks/arrivals.html') -->
-		@@include('blocks/collection.html')
+		<!-- @@include('blocks/collection.html')
+		@@include('blocks/bestseller.html') -->
+		@@include('blocks/promotion.html')
 		<!-- @@include('blocks/header.html') -->
 		@@include('blocks/footer.html')
 		<script src="./js/index.bundle.js"></script>
