--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -1,5 +1,30 @@
 <footer class="footer">
-	<div class="container">
-		<h2>Footer</h2>
-	</div>
+  <div class="container">
+    <div class="footer__row footer__row--top">
+      <div class="footer__title">
+        <div class="footer__logo">3legant<span>.</span></div>
+        <div class="footer__separator"></div>
+        <div class="footer__store">Headphone Store</div>
+      </div>
+      <ul class="footer__nav">
+        <li><a href="">Home</a></li>
+        <li><a href="">Shop</a></li>
+        <li><a href="">Product</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Contact Us</a></li>
+      </ul>
+    </div>
+    <div class="footer__row footer__row--border">
+      <div class="footer__copyright">
+        <p>Copyright © 2023 3legant. All rights reserved</p>
+        <a>Privacy Policy</a>
+        <a>Terms of Use</a>
+      </div>
+      <div class="footer__social">
+        <a href=""><img src="./img/icons/instagram.svg" alt="instagram" /></a>
+        <a href=""><img src="./img/icons/facebook.svg" alt="facebook" /></a>
+        <a href=""><img src="./img/icons/youtube.svg" alt="youtube" /></a>
+      </div>
+    </div>
+  </div>
 </footer>
