--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,11 +10,13 @@
 	<body>
 		@@include('blocks/tagline.html')
 		@@include('blocks/nav.html')
-		<!-- @@include('blocks/hero.html') -->
-		<!-- @@include('blocks/arrivals.html') -->
-		<!-- @@include('blocks/collection.html')
-		@@include('blocks/bestseller.html') -->
+		@@include('blocks/hero.html')
+		@@include('blocks/arrivals.html')
+		@@include('blocks/collection.html')
+		@@include('blocks/bestseller.html')
 		@@include('blocks/promotion.html')
+		@@include('blocks/values.html')
+		@@include('blocks/newsletter.html')
 		<!-- @@include('blocks/header.html') -->
 		@@include('blocks/footer.html')
 		<script src="./js/index.bundle.js"></script>
