elegant store mobile ready

--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -17,8 +17,11 @@
     <div class="footer__row footer__row--border">
       <div class="footer__copyright">
         <p>Copyright © 2023 3legant. All rights reserved</p>
-        <a>Privacy Policy</a>
-        <a>Terms of Use</a>
+        <p class="footer__copyright-links">
+
+          <a>Privacy Policy</a>
+          <a>Terms of Use</a>
+        </p>
       </div>
       <div class="footer__social">
         <a href=""><img src="./img/icons/instagram.svg" alt="instagram" /></a>
