--- a/src/html/blocks/nav.html
+++ b/src/html/blocks/nav.html
@@ -1,7 +1,12 @@
 <nav class="nav">
   <div class="container">
     <div class="nav__row">
-      <a href="" class="nav__logo logo">3legant.</a>
+      <div class="nav__logo">
+        <button class="nav__btn">
+          <img src="./img/icons/menu.svg" alt="menu" />
+        </button>
+        <a href="" class=" logo">3legant.</a>
+      </div>
       <ul class="nav__list">
         <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
         <li class="nav__item">
@@ -16,9 +21,13 @@
         </li>
         <li class="nav__item"><a href="#" class="nav__link">Contact Us</a></li>
       </ul>
-      <div class="nav_buttons">
-        <button><img src="./img/icons/search.svg" alt="search" /></button>
-        <button><img src="./img/icons/user.svg" alt="user" /></button>
+      <div class="nav__buttons">
+        <button class="nav__buttons--search">
+          <img src="./img/icons/search.svg" alt="search" />
+        </button>
+        <button class="nav__buttons--user">
+          <img src="./img/icons/user.svg" alt="user" />
+        </button>
         <button>
           <img src="./img/icons/shopping bag.svg" alt="cart" />
           <span class="nav__btn-count">2</span>
