--- a/src/html/blocks/hero.html
+++ b/src/html/blocks/hero.html
@@ -1,7 +1,7 @@
 <section class="hero">
   <div class="hero__container">
     <div class="hero__content">
-      <h1 class="hero__title">Listen to<br> the <span>amazing</span> music sound.</h1>
+      <h1 class="hero__title">Listen to the&nbsp;<span>amazing</span> music sound.</h1>
       <div class="hero__desc">
 
         <p>Experience music like never before</p>
